--- a/home.html
+++ b/home.html
@@ -40,6 +40,15 @@ bla bla bla</h1>
 <a href="#" class="btn btn-half">REGISTER</a> 
 
 </div> 
+<div>
+    <ul class="esentials">
+        <li>Set Daily Tasks</li>
+        <li>Complete them and earn a badge</li>
+        <li>Share with Your friends.</li>
+        <li>Be a Healty Person</li>
+    </ul>
+   
+</div>
 </header> 
 
 </body> 
